Feature: Página para cadastrar novo curso

--- a/client/style/style.less
+++ b/client/style/style.less
@@ -323,97 +323,44 @@ main {
                     width: calc(16rem + 5%);
 
                     .members,
-                    .files:first-of-type {
+                    .files,
+                    .unit:first-of-type {
                         margin: 1.7rem 0rem 0rem 0rem;
                     }
 
                     & .members,
-                    .files {
-                    
-                    outline: none;
-                    width: 100%;
-                    box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 3px 0px;
-                    border-radius: 0.3rem;
-                    padding: 0.5rem 1rem 0.5rem 0.7rem;
-                    font-size: 0.9rem;
-                    font-family: @roboto-regular;
-                    margin: .8rem 0rem 0rem 0rem;
-                    display: flex;
-                    position: relative;
-                    flex-direction: row;
-                    align-items: center;
-
-                    & img {
-                        width: 1rem;
-                        height: 1rem;
-                        margin-right: 0.5rem;
-                        opacity: 0.8;
-                    }
-
-                    & p {
-                        margin-bottom: 0;
-                        color: @lighten-black;
-                        opacity: 0.8;
-                    }
-
-                    & span {
-                        position: absolute;
-                        top: .7rem;
-                        right: .7rem;
-                        width: 1rem;
-                        height: 1rem;
-                        border-radius: 0.15rem;
-                        background-color: @primary-red;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        color: @secundary-white;
-                        font-weight: bolder;
-                        font-size: 1.2rem;
-                        cursor: pointer;
-                    }
-                    
-
-                    & .files {
-                        width: calc(24rem + 5%);
-                    }
-
-                    & select {
-                        padding: 0.420rem 1rem 0.420rem 1rem;
-                    }
-                }
-
-                & .teacher-section,
-                .coordinator-section {
-                    margin-top: 1rem;
-
-                    & p {
-                        margin-bottom: 0rem;
-                        margin-top: 1rem;
-                    }
-
-                    & .section-linked-data {
-                        margin: 1rem 0rem 0rem 0rem;
-                        background: @terciary-white;
-                        width: 19rem;
-                        border-radius: 0.3rem;
+                    .files,
+                    .unit {
+                        outline: none;
+                        width: 100%;
                         box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 3px 0px;
                         border-radius: 0.3rem;
-                        padding: 0.8rem 1rem 0.5rem 1.3rem;
+                        padding: 0.5rem 1rem 0.5rem 0.7rem;
                         font-size: 0.9rem;
                         font-family: @roboto-regular;
+                        margin: .8rem 0rem 0rem 0rem;
+                        display: flex;
+                        position: relative;
+                        flex-direction: row;
+                        align-items: center;
 
-                        & .icon {
-                            width: 1.6rem;
-                            height: 1.6rem;
+                        & img {
+                            width: 1rem;
+                            height: 1rem;
+                            margin-right: 0.5rem;
+                            opacity: 0.8;
                         }
 
                         & p {
-                            margin-bottom: 0rem;
-                            margin-top: 0rem;
+                            margin-bottom: 0;
+                            color: @lighten-black;
+                            opacity: 0.8;
                         }
 
                         & span {
+                            position: absolute;
+                            top: .7rem;
+                            right: .7rem;
                             width: 1rem;
                             height: 1rem;
                             border-radius: 0.15rem;
@@ -426,26 +373,113 @@ main {
                             font-size: 1.2rem;
                             cursor: pointer;
                         }
+                        
 
-                        & .linked-data{
+                        & .files {
+                            width: calc(24rem + 5%);
+                        }
 
+                        & select {
+                            padding: 0.420rem 1rem 0.420rem 1rem;
+                        }
+                    }
 
-                            & .unity-name{
-                                color: lighten(@secundary-black, 40%);
+                    & .unit {
+                        display: flex;
+                        align-items: center;
+                        
+                        & img {
+                            width: 1.8rem;
+                            height: 1.8rem;
+                            margin-right: 1rem;
+                        }
+                        
+                        & .unit-info {
+                            display: flex;
+                            flex-direction: column;
+                            margin: .5rem 0;
+                        
+                            & h1 {
+                                font-size: .8rem;
+                                margin: 0;
+                                color: @lighten-black;
+                                opacity: 0.8;
                                 text-transform: uppercase;
                             }
-
-                            & .discipline-name{
-                                color: @secundary-black;
-                                font-family: @roboto-bold;
-                            }
-
-                            & .curse-name{
+                        
+                            & h2 {
+                                font-size: .5rem;
+                                margin: 0;
+                                margin-top: .2rem;
                                 color: @primary-red;
+                                opacity: 0.8;
                             }
                         }
                     }
-                }
+                      
+
+                    & .teacher-section,
+                    .coordinator-section {
+                        margin-top: 1rem;
+
+                        & p {
+                            margin-bottom: 0rem;
+                            margin-top: 1rem;
+                        }
+
+                        & .section-linked-data {
+                            margin: 1rem 0rem 0rem 0rem;
+                            background: @terciary-white;
+                            width: 19rem;
+                            border-radius: 0.3rem;
+                            box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 3px 0px;
+                            border-radius: 0.3rem;
+                            padding: 0.8rem 1rem 0.5rem 1.3rem;
+                            font-size: 0.9rem;
+                            font-family: @roboto-regular;
+
+                            & .icon {
+                                width: 1.6rem;
+                                height: 1.6rem;
+                            }
+
+                            & p {
+                                margin-bottom: 0rem;
+                                margin-top: 0rem;
+                            }
+
+                            & span {
+                                width: 1rem;
+                                height: 1rem;
+                                border-radius: 0.15rem;
+                                background-color: @primary-red;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                color: @secundary-white;
+                                font-weight: bolder;
+                                font-size: 1.2rem;
+                                cursor: pointer;
+                            }
+
+                            & .linked-data{
+
+                                & .unity-name{
+                                    color: lighten(@secundary-black, 40%);
+                                    text-transform: uppercase;
+                                }
+
+                                & .discipline-name{
+                                    color: @secundary-black;
+                                    font-family: @roboto-bold;
+                                }
+
+                                & .curse-name{
+                                    color: @primary-red;
+                                }
+                            }
+                        }
+                    }
                 }
 
                 & .fe-limited {
