Feature: preparação do ambiente

--- a/client/style/style.less
+++ b/client/style/style.less
@@ -866,6 +866,14 @@ main {
         background-color: @quinary-white;
         padding-left: 4rem;
 
+        & .page-section {
+
+            & button {
+                margin-right: 2rem;
+            }
+
+        }
+
         & .section-data {
             padding-top: 4rem;
             width: 70%;
@@ -978,6 +986,9 @@ main {
             width: 100%;
             height: 4rem;
             border-radius: 0.4rem;
+            display: flex;
+            justify-content: space-between !important;
+            align-items: center;
 
 
             & h2 {
